2006-05-07 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* remove dependency on win32all
	* make config of configfile location possible
	* some things to improve emacs interop
	* some changes to manual
	
2006-04-25 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Small change in ansi color handling for default values

2006-04-24 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Apply Walter Dörwald's patch for ansi color sequences.

2006-04-19 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Improved ansi escape sequence parsing
	
2006-03-10 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* added logger module (forgot to commit before). 
	* Fixed bug in read_history that crashed python if no .history file 
	  was available
	* added config option for history filename
	* config option for history buffer length
	* default value of history_name in new config file is .pythonhistory
	* Prints error message to sys.stderr when there is some exception 
	  raised in the configfile
	
2006-03-08 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* fixed release.py setup.py and eggsetup.py to include more metadata 
	  useful for pypi.
	  
2006-03-07 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Fixed release.py so python setup.py register works. 
	  (\ must be escaped in description string as \\\\ for reST to work)

2006-03-05 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Updating manual
	* adding readline.py alias (necessary for rlcompleter)
	* adding read/write history to startup.py example
	* minor changes to release.py
	
2006-03-02 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Work on setup and eggsetup
	* Added COPYING file
	
2006-03-02 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Started work on latex manual
	* Created configuration directory in the package directory
	* Moved config file and startup.py example to configuration dir
