@@ -1,9 +1,14 @@
+2006-05-31 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
+	* added text about installation for the binary release to the manual
+	* Added code to remove temporary latex files when building manual
+	* changed version in release.py to 1.3
+
 2006-05-07 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
 	* remove dependency on win32all
 	* make config of configfile location possible
 	* some things to improve emacs interop
 	* some changes to manual
-	
+
 2006-04-25 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
 	* Small change in ansi color handling for default values
 
